<resources>
    <string name="facebook_application_id" translatable="false">1:722864828743:android:6fa6016bf44d7e58</string>
    <string name="facebook_login_protocol_scheme" translatable="false">1:722864828743:android:6fa6016bf44d7e58</string>
    <string name="app_name">Spokes</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


    <!-- Strings related to UI flow -->
    <string name="back">Back</string>


    <!-- Strings related to services -->
    <string name="facebook">Facebook</string>
    <string name="gmail">Gmail</string>
    <string name="github">Github</string>
    <string name="yahoo_news">Yahoo News</string>
    <string name="slack">Slack</string>

    <!-- Strings related to setup -->
    <string name="setup">Setup</string>
    <string name="selectservices">Select Frequently Used Services</string>
    <string name="addservices">Select a Service</string>
    <string-array name="service_arrays">
        <item>Github</item>
        <item>Slack</item>
        <item>Facebook</item>
        <item>Twitter</item>
        <item>Gmail</item>
        <item>Instagram</item>
        <item>Snapchat</item>
        <item>Vine</item>
    </string-array>


    <!-- Strings related to addfriends -->
    <string name="addfriends">Add Friends</string>
    <string name="search">Search by Username: </string>
    <string name="searchby">Search</string>
    <string name="searchbar">______</string>


    <!-- Strings related to menus -->
    <string name="addfriend">AddFriend</string>
    <string name="menu">Menu</string>
    <string name="notification">Notifications</string>

    <!-- Strings related to pokes -->
    <string name="poke">Poke</string>
    <string name="pokeback">Poke Back</string>
    <string name="pileon">Pile On</string>

    <!-- Strings related to friends2 -->
    <string name="title_activity_friends">Friends</string>
    <string name="friend1"> Friend 1</string>
    <string name="friend2"> Friend 2</string>
    <string name="friend3"> Friend 3</string>

    <!-- Strings related to activityfeed -->
    <string name="title_activity_activityfeed">activityfeed</string>
    <string name="activityfeed">Activity Feed</string>
    <string name="feeditem1">Friend 1 ignored Friend 2</string>
    <string name="feeditem2">Friend 2 poked Friend 3</string>
    <string name="feeditem3">Friend 3 poked You</string>
    <string name="feeditem4">Friend 2 poked You</string>
    <string name="feeditem5">Friend 2 ignored You</string>
    <string name="title_activity_setup">setup</string>

    <!-- Strings related to notifications -->
    <string name="title_activity_notifications">Notifications</string>
    <string name="timestamp">Timestamp</string>

    <string name="facebook_app_id">348970479276004</string>
    <string name="fb_login_protocol_scheme">fb348970479276004</string>


</resources>
